// Copyright 2019 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package Insertion;


service InsertService {
  rpc InsertEntry (InsertRequest) returns (StatusResponse);
}


// Message pour la requête d'insertion
message InsertRequest {
  int32 id = 1;
  string detail = 2;
  int32 value = 3;
  google.protobuf.Timestamp dateOperation = 4;

  // Ajoutez d'autres champs au besoin
}

// Message pour la réponse de statut
message StatusResponse {
  int32 code = 1;           // Code numérique (ex: 200, 404, 500)
  string body_message = 2;   // Message principal
  string detail = 3;         // Détails supplémentaires
}